fix(website): improve contrast and fix mobile layout

--- a/website/src/css/prism/dark.css
+++ b/website/src/css/prism/dark.css
@@ -38,14 +38,14 @@ code[class*="language-"] *::selection {
 pre[class*="language-"] {
 	padding: 1em;
 	overflow: auto;
-	/* background: #1e1e1e; */
+	/* background: #111; */
 }
 
 :not(pre) > code[class*="language-"] {
 	padding: .1em .3em;
 	border-radius: .3em;
 	color: #db4c69;
-	background: #1e1e1e;
+	background: #111;
 }
 /*********************************************************
 * Tokens
